Adds displaying tests results.